<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Currency Convertor</string>
    <string name="hello_world">Currency Convertor</string>
    <string name="action_settings">Settings</string>
    <string name="currency1">currency1</string>
    <string name="currency2">currency2</string>
    <string name="currency3">currency3</string>
    <string name="currency4">currency4</string>
    <string name="currency5">currency5</string>
    <string name="currency6">currency6</string>
    <string name="currency7">currency7</string>
    <string name="list_view_title">Currency Listing</string>
    <string name="next_btn"> next button </string>
    <string name="country">China></string>
    <string name="admob_id">828650e8086b4e2b</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search Names</string>
</resources>
